# qrank

./: README.md  mkdocs.yml  pyproject.toml
docs/: cli.md  index.md  usage.md
src/qrank/: __main__.py  analyzer.py  db.py
tests/: test_basic.py
